--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "kirkifier"
 version = "0.1.0"
-description = "Add your description here"
+description = " kirkifies any picture or video you give it "
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
